[gd_scene load_steps=15 format=3 uid="uid://dx3ay86jqtdbs"]

[ext_resource type="Script" path="res://main.gd" id="1_8cka2"]
[ext_resource type="PackedScene" uid="uid://43sk0uh5sc6b" path="res://player.tscn" id="1_ndwwr"]
[ext_resource type="FontFile" uid="uid://dkgoann7j8jnt" path="res://fonts/Montserrat-Medium.ttf" id="3_u7ioa"]
[ext_resource type="Script" path="res://score_label.gd" id="4_ri02h"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5qv1s"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_jj2u5"]
sky_material = SubResource("ProceduralSkyMaterial_5qv1s")

[sub_resource type="Environment" id="Environment_h4cim"]
background_mode = 2
sky = SubResource("Sky_jj2u5")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_2hpl5"]
size = Vector3(30, 1, 30)

[sub_resource type="BoxMesh" id="BoxMesh_g3qka"]
size = Vector3(30, 1, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3g3tp"]
roughness = 0.0
uv1_triplanar = true

[sub_resource type="CylinderMesh" id="CylinderMesh_yjsbl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h155v"]
albedo_color = Color(0, 0.403922, 0.882353, 1)

[sub_resource type="Curve3D" id="Curve3D_vqewa"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -4.95869, 0, -5.09105, 0, 0, 0, 0, 0, 0, 5.09353, 0, -5.09105, 0, 0, 0, 0, 0, 0, 5.04277, 0, 4.96117, 0, 0, 0, 0, 0, 0, -5.00946, 0, 5.06271, 0, 0, 0, 0, 0, 0, -4.95869, 0, -5.09105),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_hkeuj"]
default_font = ExtResource("3_u7ioa")
default_font_size = 24

[node name="Main" type="Node3D"]
script = ExtResource("1_8cka2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h4cim")

[node name="StaticGround" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.59872, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticGround"]
shape = SubResource("BoxShape3D_2hpl5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticGround"]
mesh = SubResource("BoxMesh_g3qka")
surface_material_override/0 = SubResource("StandardMaterial3D_3g3tp")

[node name="Player" parent="." instance=ExtResource("1_ndwwr")]

[node name="Camera" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.90735e-06, 19)
projection = 1
current = true
fov = 60.0
size = 10.0
far = 100.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -5)
mesh = SubResource("CylinderMesh_yjsbl")
surface_material_override/0 = SubResource("StandardMaterial3D_h155v")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -5)
mesh = SubResource("CylinderMesh_yjsbl")
surface_material_override/0 = SubResource("StandardMaterial3D_h155v")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 5)
mesh = SubResource("CylinderMesh_yjsbl")
surface_material_override/0 = SubResource("StandardMaterial3D_h155v")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 5)
mesh = SubResource("CylinderMesh_yjsbl")
surface_material_override/0 = SubResource("StandardMaterial3D_h155v")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_vqewa")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-4.3711e-08, 0, -0.999991, 0, 1, 0, 0.999991, 0, -4.3711e-08, -4.95869, 0, -5.09105)
rotation_mode = 1

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hkeuj")

[node name="Retry" type="ColorRect" parent="UserInterface"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.333333)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Press `Space` to retry"
horizontal_alignment = 1

[node name="Label" type="Label" parent="UserInterface"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.5
offset_top = 92.0
offset_right = 30.5
offset_bottom = 115.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("4_ri02h")

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
